added getVideoProgress method
